--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Casio FX-82MS Calculator",
     "short_name": "FX-82MS",
     "description": "Casio Calculator",
-    "start_url": "/casio.html",
+    "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#4a4a4a",
     "theme_color": "#4a4a4a",
